# CUDA_tutorial

./: .gitignore  3_sum_arrays.cu  CMakeLists.txt  README.md
doc/caltech_2022/: lab1.c  lab1.txt
include/: global.h
src/: cuda_info.cu  mat_mul.cu  sum_2d_large_arrays.cu  thread_index.cu
